--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,9 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "gh-pages": "^4.0.0",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4"
+    "react-hook-form": "^7.43.1",
+    "tailwindcss": "^3.2.4",
+    "yup": "^1.0.0"
   }
 }
